# aoc24

./: LICENSE  README.txt
day 1/: one.cabal
day 1/src/: Main.hs
day1/: aocDay1.cabal
day1/app/: Main.hs
