cabal-version:      3.0
name:               one
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             bltzxsd
maintainer:         59281378+bltzxsd@users.noreply.github.com
-- copyright:
build-type:         Simple

common warnings
    ghc-options: -Wall

executable one
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    directory ^>= 1.3.7.1, unordered-containers ^>= 0.2.20, base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
